--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3'
 
+networks:
+    nginx-php74-mysql8-node:
+    
 services:
 
     # nginx
@@ -15,7 +18,7 @@ services:
             - php74-service
             - mysql8-service
         networks:
-            - my-main-net
+            - nginx-php74-mysql8-node
 
     # php
     php74-service:
@@ -28,7 +31,7 @@ services:
         volumes:
             - ./app:/var/www/project
         networks:
-            - my-main-net
+            - nginx-php74-mysql8-node
 
     # mysql
     mysql8-service:
@@ -44,7 +47,7 @@ services:
             MYSQL_ROOT_PASSWORD: secret
             MYSQL_PASSWORD: secret
         networks:
-            - my-main-net
+            - nginx-php74-mysql8-node
 
     # node
     node-service:
@@ -54,7 +57,7 @@ services:
             - ./app:/var/www/project
         working_dir: /var/www/project
         networks:
-            - my-main-net
+            - nginx-php74-mysql8-node
            
 networks:
   my-main-net:
